# poc_iptu_isencao

./: Dockerfile  README.md  codigo.py  docker-compose.yml  poc_iptu.txt  pyproject.toml  requirements.txt
config/: CHANGELOG_P0.md  business_rules.yaml  checklist_iptu.yaml  conclusion_mapping.yaml  document_taxonomy.yaml  legal_references.yaml  prompts.yaml
examples/: minuta_exemplo_SEI_5737.txt
frontend/: iptu_interface.html
poc_iptu/: __init__.py
poc_iptu/adapters/: __init__.py  pymupdf_reader.py
poc_iptu/api/: main.py
poc_iptu/app/: __init__.py  analysis_runner.py  streamlit_app.py
poc_iptu/application/: __init__.py  analyze_process_use_case.py
poc_iptu/config/: __init__.py  loader.py  schemas.py
poc_iptu/domain/: __init__.py  enums.py  errors.py  models.py  pipeline_models.py
poc_iptu/drafting/: __init__.py  decision_draft_service.py  draft_guardrails.py  draft_layout.py
poc_iptu/ports/: __init__.py  decision_drafting.py  document_classification.py  document_reader.py  field_extraction.py  ocr.py
poc_iptu/rules/: __init__.py  admissibility_evaluator.py  checklist_assembler.py  conclusion_resolver.py  confidence_policy.py  income_limit_calculator.py  legal_regime_selector.py  legitimacy_evaluator.py  process_evaluator.py  timeliness_evaluator.py
tests/fakes/: chat_fakes.py  llm_fakes.py  pdf_factory.py
tests/fixtures/: golden_case_5737.py
tests/integration/: test_analysis_runner.py  test_analyze_process_use_case.py  test_azure_llm_pipeline.py
tests/regression/: test_conclusion_precedence.py  test_golden_case_5737.py
(+18 files in other folders)
